# libhmm

./: .clang-format  .clang-tidy  .cmake-format.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MIGRATION.md  PLAN.md  README.md  TRAINING_MODERNIZATION_PHASE1.md  TRAINING_MODERNIZATION_PHASE2.md  WARP.md  build_windows.bat  test_calculator_selection  test_complete_replacement  test_log_simd  test_matrix_vector
benchmarks/: CMakeLists.txt  debug_stochhmm_model_Dishonest Casino.hmm  debug_stochhmm_model_Weather Model.hmm  simple_continuous.hmm
benchmarks/docs/: BENCHMARKING_RESULTS.md  BENCHMARK_UPDATE_SUMMARY.md  HMM_Library_Comparison_Plan.md  Library_Compatibility_Guide.md  Performance_Analysis.md  StochHMM_Analysis.md  hmm_library_survey.md
benchmarks/src/: algorithm_performance_benchmark.cpp  classic_problems_benchmark.cpp  deep_numerical_analysis.cpp  diagnostic_accuracy_test.cpp  gaussian_distribution_comparison.cpp  libhmm_discrete_benchmark.cpp  libhmm_vs_ghmm_benchmark.cpp  libhmm_vs_ghmm_continuous_benchmark.cpp  libhmm_vs_hmmlib_benchmark.cpp  libhmm_vs_htk_benchmark.cpp  libhmm_vs_htk_continuous_benchmark.cpp  libhmm_vs_jahmm_benchmark.cpp  libhmm_vs_lamp_benchmark.cpp  libhmm_vs_stochhmm_benchmark.cpp  libhmm_vs_stochhmm_continuous_benchmark.cpp  libhmm_vs_stochhmm_distribution_suite.cpp  library_usage_examples.cpp  multistate_scaling_benchmark.cpp  numerical_accuracy_test.cpp  simple_benchmark.cpp  simple_libhmm_test.cpp  stochhmm_api_test.cpp  threeway_benchmark.cpp
consumer_example/: CMakeLists.txt  README.md  main.cpp
consumer_example_fetchcontent/: CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  basic_hmm_example.cpp  baum_welch_example.cpp  dax_regime_example.cpp  earthquake_example.cpp  economics_hmm_example.cpp  elk_movement_example.cpp  elk_mv_example.cpp  financial_hmm_example.cpp  map_baum_welch_example.cpp  mv_gaussian_example.cpp  mv_regime_example.cpp  poisson_hmm_example.cpp  posterior_decoding_example.cpp  quality_control_hmm_example.cpp  queuing_theory_hmm_example.cpp  reliability_hmm_example.cpp  robust_financial_hmm_example.cpp  robust_viterbi_trainer_example.cpp  segmental_kmeans_example.cpp  segmental_kmeans_mv_example.cpp  sp500_regime_example.cpp  statistical_process_control_hmm_example.cpp  student_t_hmm_example.cpp  swarm_coordination_example.cpp  viterbi_trainer_example.cpp  wind_direction_example.cpp  zeek_anomaly_poc.cpp
examples/support/: two_state_hmm.h
tests/: CMakeLists.txt  TESTING_STRATEGY.md  test_calculator_performance.cpp  test_calculator_selection.cpp  test_calculator_traits.cpp  test_calculators.cpp  test_common.cpp  test_distributions.cpp  test_hmm_core.cpp  test_hmm_stream_io.cpp  test_io.cpp  test_log_simd.cpp  test_model_selection.cpp  test_numerical_stability.cpp  test_optimized_matrix3d.cpp  test_performance.cpp  test_robust_viterbi_trainer.cpp  test_training.cpp  test_training_edge_cases.cpp  test_type_safety.cpp
tests/calculators/: test_basic_calculator_performance.cpp  test_calculator_continuous.cpp  test_calculator_edge_cases.cpp  test_canonical_calculators.cpp  test_fb_mode_parity.cpp  test_forwardbackward_calculators.cpp  test_forwardbackward_performance.cpp  test_forwardbackward_selection.cpp  test_forwardbackward_traits.cpp  test_modernized_apis.cpp  test_mv_calculator.cpp  test_posterior_decoding.cpp  test_simd_forward_backward_calculators.cpp  test_simd_viterbi_calculators.cpp  test_viterbi_calculators.cpp  test_viterbi_performance.cpp  test_viterbi_selection.cpp  test_viterbi_traits.cpp
tests/common/: test_common.cpp  test_complete_replacement  test_complete_replacement.cpp  test_linear_operations_classes.cpp  test_matrix_vector_replacement.cpp  test_modern_constants.cpp  test_numerical_stability.cpp  test_optimized_linear_operations.cpp  test_optimized_matrix3d.cpp  test_simple_replacement  test_simple_replacement.cpp
tests/distributions/: test_beta_distribution.cpp  test_binomial_distribution.cpp  test_chi_squared_distribution.cpp  test_discrete_distribution.cpp  test_distribution_fitting.cpp  test_distribution_traits.cpp  test_distribution_type_safety.cpp  test_distributions.cpp  test_distributions_header.cpp  test_distributions_old_broken.cpp  test_exponential_distribution.cpp  test_gamma_distribution.cpp  test_gaussian_distribution.cpp  test_log_normal_distribution.cpp  test_multivariate_distributions.cpp  test_negative_binomial_distribution.cpp  test_pareto_distribution.cpp  test_poisson_distribution.cpp  test_rayleigh_distribution.cpp  test_student_t_distribution.cpp  test_uniform_distribution.cpp  test_von_mises_distribution.cpp  test_weibull_distribution.cpp
tests/integration/: test_end_to_end.cpp
tests/io/: test_hmm_json.cpp  test_hmm_json_mv.cpp  test_hmm_stream_io.cpp  test_xml_file_io.cpp
tests/linalg/: test_cholesky.cpp
tests/performance/: README.md  analyze_overhead.cpp  benchmark_parallel.cpp  debug_parallel.cpp  parallel_calculator_assessment.cpp  parallel_constants_tuning.cpp  test_performance.cpp  test_transcendental_kernels.cpp
tests/platform/: test_simd_platform.cpp
tests/training/: test_baum_welch_convergence.cpp  test_bw_parity.cpp  test_canonical_training.cpp  test_map_baum_welch.cpp  test_mv_training.cpp  test_segmental_kmeans_mv.cpp  test_trainer_traits.cpp  test_training.cpp  test_training_edge_cases.cpp
tests/unit/: test_beta_distribution.cpp  test_chi_squared_distribution.cpp  test_discrete_distribution.cpp  test_exponential_distribution.cpp  test_gamma_distribution.cpp  test_gaussian_distribution.cpp  test_lognormal_distribution.cpp  test_pareto_distribution.cpp  test_poisson_distribution.cpp  (+2 more)
tools/: CMakeLists.txt  analyze_overhead.cpp  batch_performance.cpp  bw_hotspot.cpp  debug_parallel.cpp  fb_contour_sweep.cpp  fb_crossover_sweep.cpp  hmm_validator.cpp  hotspot_breakdown.cpp  simd_inspection.cpp  thread_pool.cpp  thread_pool.h
(+490 files in other folders)
